fix(events): remove visible text artefact when hidden

--- a/src/timeline.scss
+++ b/src/timeline.scss
@@ -154,7 +154,7 @@
 		width: 2em;
 		height: 2em;
 		transition-duration: 0s;
-		color: var(--tl-colour-entry);
+		color: transparent;
 		&:after {
 			content: "🛈";
 			font-size: 1.3em;
